# se-toolkit-lab-7

./: docker-compose.yml
bot/: .env  .env.bot.example  Dockerfile  PLAN.md  README.md  bot.py  bot.py.llm-backup  config.py  intent_router.py  pyproject.toml  requirements.txt
bot/bot/handlers/: __init__.py  health.py  help.py  labs.py  start.py
bot/handlers/: __init__.py  health.py  help.py  labs.py  scores.py  start.py
