[project]
name = "bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "httpx",
    "python-telegram-bot",
    "openai>=2.29.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
